--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -20,4 +20,8 @@
     <string name="app_label" msgid="581696352855930028">"Medienspeicher"</string>
     <string name="upgrade_msg" msgid="4093462661265175619">"Medien-Datenbank wird aktualisiert."</string>
     <string name="artist_label" msgid="1181678850424271227">"Interpret"</string>
+
+    <!-- Ask to scan on boot -->
+    <string name="ask_scan_title">Für neue Medien scannen?</string>
+    <string name="ask_scan_text">Anklicken um manuell für neue Medien zu scannen</string>
 </resources>
